--- a/src/app/core/toolbar/toolbar.component.html
+++ b/src/app/core/toolbar/toolbar.component.html
@@ -1,3 +1,6 @@
-<mat-toolbar color="primary">
-  <span>Flow</span>
+<mat-toolbar class="mat-elevation-z5" color="primary">
+  <button mat-icon-button (click)="toggleSideNav()">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <span>Mindflow</span>
 </mat-toolbar>
