--- a/src/app/core/sidenav/sidenav.component.html
+++ b/src/app/core/sidenav/sidenav.component.html
@@ -1,5 +1,5 @@
 <mat-sidenav-container>
-  <mat-sidenav #sideNav [mode]="mode" [fixedInViewport]="fixedInViewport" fixedTopGap="56">
+  <mat-sidenav #sideNav class="mat-elevation-z4" [mode]="mode" [fixedInViewport]="fixedInViewport" fixedTopGap="56">
     <mat-nav-list>
       <a mat-list-item routerLink="/">Flow</a>
     </mat-nav-list>
