--- a/src/app/graph/graph.component.css
+++ b/src/app/graph/graph.component.css
@@ -4,23 +4,10 @@
   width: 100%;
 }
 
-svg {
-  height: 100%;
-  width: 100%;
-}
-
-circle {
-  pointer-events: all;
-  stroke: none;
-  stroke-width: 40px;
-}
-
-.link {
-  stroke: #fff;
-  stroke-width: 2px;
-}
-
 .node text {
-  pointer-events: none;
-  font: 10px sans-serif;
+  font: 12px 'Roboto, sans-serif';
+	color: #fff;
+	text-anchor: middle;
+	font-weight: 300;
+	-webkit-font-smoothing: antialiased;
 }
