--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -1,1 +1,8 @@
-<div class="flowChart"></div>
+<div class="flowChart">
+    <button id="contextMenuBtn" mat-button [matMenuTriggerFor]="menu">Menu</button>
+    <mat-menu id="contextMenu" #menu="matMenu" (close)="onMenuClosed()">
+        <button mat-menu-item (click)="closeMenu()">
+            Close menu
+        </button>
+    </mat-menu>
+</div>
