added firebase, implemented authentication, and small refactoring

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
-<app-toolbar (sideNavToggle)="onSideNavToggle($event)"></app-toolbar>
-<app-sidenav [fixedInViewport]="sideNavFixed" [mode]="sideNavMode" [open]="sideNavOpen">
+<app-toolbar *ngIf="!isAdmin" (sideNavToggle)="onSideNavToggle($event)"></app-toolbar>
+<app-sidenav *ngIf="!isAdmin" [fixedInViewport]="sideNavFixed" [mode]="sideNavMode" [open]="sideNavOpen">
     <router-outlet></router-outlet>
 </app-sidenav>
+<div *ngIf="isAdmin">
+    <router-outlet></router-outlet>
+</div>
