--- a/src/app/core/loading-dialog/loading-dialog.component.html
+++ b/src/app/core/loading-dialog/loading-dialog.component.html
@@ -1,3 +1,4 @@
-<p>
-  loading-dialog works!
-</p>
+<mat-dialog-content class="loading-dialog">
+  <h1 mat-dialog-title>Please wait...</h1>
+  <mat-spinner></mat-spinner>
+</mat-dialog-content>
