--- a/src/app/core/sidenav/sidenav.component.html
+++ b/src/app/core/sidenav/sidenav.component.html
@@ -1,7 +1,16 @@
 <mat-sidenav-container>
   <mat-sidenav #sideNav class="mat-elevation-z4" [mode]="mode" [fixedInViewport]="fixedInViewport" fixedTopGap="56">
     <mat-nav-list>
-      <a mat-list-item routerLink="/">Flow</a>
+      <h3 mat-subheader>Flows</h3>
+      <mat-divider></mat-divider>
+      <a *ngFor="let flow of flows" (click)="selectFlow(flow)" mat-list-item>
+        <mat-icon mat-list-icon>share</mat-icon>
+        <h4 mat-line>{{ flow.name }} </h4>
+      </a>
+      <a (click)="addFlow()" mat-list-item>
+        <mat-icon class="caption" mat-list-icon>add</mat-icon>
+        <h4 class="caption" mat-line>Add flow</h4>
+      </a>
     </mat-nav-list>
   </mat-sidenav>
 
