--- a/src/app/flow/idea-edit-dialog/idea-edit-dialog.component.html
+++ b/src/app/flow/idea-edit-dialog/idea-edit-dialog.component.html
@@ -1,3 +1,62 @@
-<p>
-  idea-edit-dialog works!
-</p>
+<h2 mat-dialog-title>Edit idea</h2>
+<mat-dialog-content>
+  <form class="flex column" [formGroup]="ideaForm" novalidate>
+    <mat-form-field class="mb-1">
+      <input formControlName="name" matInput placeholder="Name*" type="text">
+      <mat-error *ngIf="ideaForm.controls.name.touched && ideaForm.controls.name.errors?.required">
+        <mat-icon>warning</mat-icon> Idea name is
+        <strong>required</strong>
+      </mat-error>
+    </mat-form-field>
+    <mat-form-field class="mb-1">
+      <textarea formControlName="description" matInput placeholder="Description*" type="text"></textarea>
+      <mat-error *ngIf="ideaForm.controls.description.touched && ideaForm.controls.description.errors?.required">
+        <mat-icon>warning</mat-icon> Description is
+        <strong>required</strong>
+      </mat-error>
+    </mat-form-field>
+    <mat-form-field class="mb-1">
+      <input formControlName="id" matInput placeholder="Unique flow ID*" type="text">
+      <mat-error *ngIf="ideaForm.controls.id.touched && ideaForm.controls.id.errors?.required">
+        <mat-icon>warning</mat-icon> ID is
+        <strong>required</strong>
+      </mat-error>
+    </mat-form-field>
+    <div class="flex row middle">
+      <mat-form-field class="spacer">
+        <input #trigger="mccColorPickerOrigin" formControlName="color" matInput mccColorPickerOrigin placeholder="Color*">
+      </mat-form-field>
+      <mat-error *ngIf="ideaForm.controls.color.touched && ideaForm.controls.color.errors?.required">
+        <mat-icon>warning</mat-icon> Color is
+        <strong>required</strong>
+      </mat-error>
+      <mcc-color-picker mccConnectedColorPicker [mccConnectedColorPickerOrigin]="trigger"></mcc-color-picker>
+    </div>
+  </form>
+  <mat-list *ngIf="data.ideas && data.ideas.length">
+    <h3 mat-subheader>Connections</h3>
+    <mat-divider></mat-divider>
+    <mat-list-item *ngFor="let connection of connections; let i = index" class="flex row middle mt-1">
+      <mat-select [ngModel]="connection.target" placeholder="Connections">
+        <mat-option *ngFor="let idea of data.ideas" [value]="idea.id">{{ idea.name }}</mat-option>
+      </mat-select>
+      <mat-form-field>
+        <input matInput [ngModel]="connection.distance" placeholder="Distance">
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput [ngModel]="connection.strength" placeholder="Strength">
+      </mat-form-field>
+    </mat-list-item>
+    <mat-list-item (click)="addConnection()">
+      <button mat-icon-button>
+        <mat-icon class="caption" mat-list-icon>add</mat-icon>
+      </button>
+      <h4 class="caption" mat-line>Add flow</h4>
+    </mat-list-item>
+  </mat-list>
+</mat-dialog-content>
+<mat-dialog-actions class="flex row">
+  <span class="spacer"></span>
+  <button mat-button mat-dialog-close>Cancel</button>
+  <button (click)="save()" [disabled]="ideaForm.invalid" mat-button [mat-dialog-close]="flow">Done</button>
+</mat-dialog-actions>
