changed idead dialog title

--- a/src/app/flow/idea-edit-dialog/idea-edit-dialog.component.html
+++ b/src/app/flow/idea-edit-dialog/idea-edit-dialog.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Edit idea</h2>
+<h2 mat-dialog-title>What's on your mind?</h2>
 <mat-dialog-content>
   <form class="flex column" [formGroup]="ideaForm" novalidate>
     <mat-form-field class="mb-1">
