--- a/src/app/flow/flow.component.html
+++ b/src/app/flow/flow.component.html
@@ -2,7 +2,6 @@
 <app-sidenav (add)="addFlow()" (edit)="editFlow($event)" [fixedInViewport]="sideNavFixed" [flows]="flows" [mode]="sideNavMode"
     [open]="sideNavOpen" (remove)="removeFlow($event)" (select)="selectFlow($event)">
     <div class="flowChart">
-        <input type="file" #fileInput style="visibility: hidden; height: 0px" (change)="importFlow($event)" />
         <button id="contextMenuBtn" mat-button [matMenuTriggerFor]="menu"></button>
         <mat-menu #menu="matMenu" (close)="onMenuClosed()">
             <button *ngIf="!selectedIdea" mat-menu-item (click)="addIdea(menu)">
@@ -25,4 +24,5 @@
             <mat-icon>lightbulb_outline</mat-icon>
         </button>
     </div>
+    <input #fileInput (change)="importFlow($event)" class="hidden" type="file"/>
 </app-sidenav>
